--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fake REST API with json-server",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 3000"
+    "start": "npx json-server --watch db.json --port 3000"
   },
   "dependencies": {
     "json-server": "^0.17.4"
