--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-server-api",
   "version": "1.0.0",
   "description": "Fake REST API with json-server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
